--- a/package.json
+++ b/package.json
@@ -12,26 +12,24 @@
   "scripts": {
     "dev": "nodemon -w src -i src/**/*.test.js --exec 'node src/index.js'",
     "lint": "eslint src",
-    "precommit": "npm run test",
+    "precommit": "npm run test:unit",
     "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'docs(changelog): updated CHANGELOG.md' && npm version major && git push origin && git push origin --tags",
     "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'docs(changelog): updated CHANGELOG.md' && npm version minor && git push origin && git push origin --tags",
     "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'docs(changelog): updated CHANGELOG.md' && npm version patch && git push origin && git push origin --tags",
     "start": "node src/index.js",
-    "test": "NODE_ENV=test npm run test:unit && npm run test:api",
-    "test:api": "ava src/**/*.apitest.js",
-    "test:unit": "ava src/**/*.test.js"
+    "test": "npm run test:unit && npm run test:api",
+    "test:api": "ava test/api/**/*.test.js",
+    "test:unit": "ava 'test/unit/**/*.test.js'",
+    "test:unit:watch": "npm run test:unit -- --watch"
   },
-  "dependencies": {
-    "express": "^4.16.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "ava": "^0.23.0",
-    "eslint": "^4.9.0",
-    "eslint-config-google": "^0.9.1",
-    "generate-changelog": "^1.5.0",
+    "ava": "^0.24.0",
+    "eslint": "^4.12.1",
+    "generate-changelog": "^1.6.0",
     "husky": "^0.14.3",
-    "nodemon": "^1.12.1",
-    "nyc": "^11.2.1",
+    "nodemon": "^1.12.5",
+    "nyc": "^11.3.0",
     "supertest": "^3.0.0"
   }
 }
