--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,12 @@
 {
-  "extends": "google"
+  "parserOptions": {
+    "ecmaVersion": 2017,
+    "sourceType": "module"
+  },
+  "env": {
+    "node": true
+  },
+  "rules": {
+    "arrow-parens": [2, "as-needed"]
+  }
 }
