--- a/package.json
+++ b/package.json
@@ -7,29 +7,31 @@
   "license": "MIT",
   "private": true,
   "engines": {
-    "node": ">= 7.6"
+    "node": ">= 8.10.0"
   },
   "scripts": {
     "dev": "nodemon -w src -i src/**/*.test.js --exec 'node src/index.js'",
     "lint": "eslint src",
     "precommit": "npm run test:unit",
-    "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'docs(changelog): updated CHANGELOG.md' && npm version major && git push origin && git push origin --tags",
-    "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'docs(changelog): updated CHANGELOG.md' && npm version minor && git push origin && git push origin --tags",
-    "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'docs(changelog): updated CHANGELOG.md' && npm version patch && git push origin && git push origin --tags",
     "start": "node src/index.js",
     "test": "npm run test:unit && npm run test:api",
-    "test:api": "ava test/api/**/*.test.js",
+    "test:api": "ava 'test/api/**/*.test.js'",
     "test:unit": "ava 'test/unit/**/*.test.js'",
     "test:unit:watch": "npm run test:unit -- --watch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "koa": "^2.5.0",
+    "koa-router": "^7.4.0"
+  },
   "devDependencies": {
-    "ava": "^0.24.0",
-    "eslint": "^4.12.1",
+    "ava": "^1.0.0-beta.3",
+    "eslint": "^4.19.1",
+    "eslint-plugin-promise": "^3.7.0",
     "generate-changelog": "^1.6.0",
     "husky": "^0.14.3",
-    "nodemon": "^1.12.5",
-    "nyc": "^11.3.0",
+    "nodemon": "^1.17.3",
+    "nyc": "^11.6.0",
+    "standard-version": "^4.3.0",
     "supertest": "^3.0.0"
   }
 }
