chore(lint): add eslint airbnb settings

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,11 @@
   "env": {
     "node": true
   },
-  "rules": {
-    "arrow-parens": [2, "as-needed"]
-  }
+  "plugins": [
+    "promise"
+  ],
+  "extends": [
+    "airbnb-base",
+    "plugin:promise/recommended"
+  ]
 }
