--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": ">= 8.10.0"
   },
   "scripts": {
-    "dev": "nodemon -w src -i src/**/*.test.js --exec 'node src/index.js'",
+    "dev": "nodemon -w src --exec 'node src/index.js'",
     "lint": "eslint src",
     "precommit": "npm run test:unit",
     "start": "node src/index.js",
@@ -20,12 +20,16 @@
     "test:unit:watch": "npm run test:unit -- --watch"
   },
   "dependencies": {
+    "joi": "^13.1.2",
     "koa": "^2.5.0",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "pify": "^3.0.0"
   },
   "devDependencies": {
     "ava": "^1.0.0-beta.3",
     "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-promise": "^3.7.0",
     "generate-changelog": "^1.6.0",
     "husky": "^0.14.3",
