--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "husky": "^0.14.3",
     "nodemon": "^1.17.3",
     "nyc": "^11.6.0",
+    "sinon": "^4.5.0",
     "standard-version": "^4.3.0",
     "supertest": "^3.0.0"
   }
